/*
 * Copyright 2016 Google Inc. All Rights Reserved.
 * Use of this source code is governed by a BSD-style
 * license that can be found in the LICENSE file or at
 * https://developers.google.com/open-source/licenses/bsd
 */

syntax = "proto3";

package google.api.gax.integration_tests;

service TestService {
  rpc DoSimple(SimpleRequest) returns (SimpleResponse);
}

message SimpleRequest {
  string name = 1;
}

message SimpleResponse {
  string name = 2;
}
